--- a/AndroidGitProject/app/src/main/res/layout/nav_drawer_row.xml
+++ b/AndroidGitProject/app/src/main/res/layout/nav_drawer_row.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clickable="true">
@@ -12,6 +13,6 @@
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         android:textSize="15dp"
-        android:textStyle="bold" />
-
+        android:textStyle="bold"
+        android:textColor="@color/colorPrimaryDark" />
 </RelativeLayout>
