--- a/AndroidGitProject/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/AndroidGitProject/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -14,7 +14,7 @@
         <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/ic_action_search"
+            android:src="@drawable/ic_user"
             android:scaleType="fitCenter"
             android:layout_centerInParent="true"/>
 
