--- a/AndroidGitProject/app/src/main/res/layout/fragment_messages.xml
+++ b/AndroidGitProject/app/src/main/res/layout/fragment_messages.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="100dp"
         android:gravity="center_horizontal"
         android:textSize="45dp"
-        android:text="MESSAGE"
+        android:text="MESSAGE!!!!"
         android:textStyle="bold"/>
 
 </FrameLayout>
