--- a/AndroidGitProject/app/src/main/res/layout/fragment_home.xml
+++ b/AndroidGitProject/app/src/main/res/layout/fragment_home.xml
@@ -19,9 +19,12 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvToDoList"
+        android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"></android.support.v7.widget.RecyclerView>
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+    </android.support.v7.widget.RecyclerView>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
